Sat Dec  1 10:11:18 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Makefile.postamble (base.make): Depend on configure.
	(config.mak): Idem.

Sat Dec  1 09:29:43 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Makefile.postamble (base.make): New target.
	(config.mak): New target.

2001-11-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScanner.m: Fix memory leak when initialised with something
	other than a constant string.

2001-11-28  Adam Fedor  <fedor@gnu.org>

	* Documentation/gsdoc/Base.gsdoc: Add NSLanguages summary.

2001-11-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Put a limit of around a second on how long
	the delay between polling for incoming packets can grow to ...
	improve response on heavily loaded systems.
	* Source/GSHTTPURLHandle.m: ditto
	* Tools/autogsdoc.m: Tidied structure a little and added file
	modification date checks to see whether files should be regenerated
	or not.

2001-11-24  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSURL.h
	Declare NSNumber, so that it compiles without complaining.
	
2001-11-23  Laurent Julliard  <laurent@julliard-online.org>

	* Source/NSNumberFormatter.m (-encodeWithCoder:, -initWithCode:):
	fixed buggy encoder and decoder and code cleanup.

2001-11-22  Laurent Julliard  <Laurent.Julliard@xrce.xerox.com>

	* Headers/gnustep/base/Foundation.h: Fixed NSNumberFormatter.h
	missing.

Thu Nov 22 00:52:57 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile (CVS_MODULE_NAME): Define.

2001-11-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSOutput.m:
	* Tools/AGSOutput.h:
	* Tools/AGSIndex.h:
	* Tools/AGSIndex.m:
	* Tools/AGSParser.h:
	* Tools/AGSParser.m:
	* Tools/AGSHtml.h:
	* Tools/AGSHtml.m:
	* Tools/autogsdoc.m: Many bugfixes and enhancements ... generate
	html as well as gsdoc.

2001-11-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSXML.m: Implement NSCopying protocol for most classes.

2001-11-19  Adam Fedor  <fedor@gnu.org>
